--- a/Interview.html
+++ b/Interview.html
@@ -1,6 +1,6 @@
 ---
 layout: page    
-header-img: "img/birds.jpg"  
+header-img: "img/avatar.jpg"  
 description: "Viva la vida"  
 permalink: Interview.html  
 ---
